2nd training/Community/Community/Community1/force-app/main/default/objects/Annex_A_B__c/Annex_A_B__c.object-meta.xml
<CustomObject>
    <label>Annex A/B</label>
    <nameField>
        <displayFormat>Annex A {YY}-{0000}</displayFormat>
        <label>Annex A Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annexes A/B</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>