2nd training/Community/Community/Community1/force-app/main/default/objects/Annex_A_B__c/fields/Annex_A_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Annex_A_Submission_Date__c</fullName>
    <label>Annex A Submission Date</label>
    <type>Date</type>
</CustomField>