2nd training/Community/Community/Community1/force-app/main/default/objects/Annex_A_B__c/fields/Annex_B_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Annex_B_Submission_Date__c</fullName>
    <label>Annex B Submission Date</label>
    <type>Date</type>
</CustomField>