2nd training/Community/Community/Community1/force-app/main/default/objects/Annex_A_B__c/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <label>Exhibition</label>
    <referenceTo>artApp__Exhibition__c</referenceTo>
    <relationshipName>Annexes_A</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>