2nd training/Community/Community/Community1/force-app/main/default/objects/Annex_A_B__c/fields/Exhibition_End_Date2__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_End_Date2__c</fullName>
    <label>Exhibition End Date</label>
    <type>Date</type>
</CustomField>