2nd training/Community/Community/Community1/force-app/main/default/objects/Annex_A_B__c/fields/Exhibition_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_End_Date__c</fullName>
    <formula>Exhibition__r.artApp__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition End Date (Formula)</label>
    <type>Date</type>
</CustomField>