2nd training/Community/Community/Community1/force-app/main/default/objects/Annex_A_B__c/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <formula>Exhibition__r.artApp__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST</label>
    <type>Date</type>
</CustomField>